admin panel   !error!

--- a/app/src/main/assets/chatbot.html
+++ b/app/src/main/assets/chatbot.html
@@ -4,7 +4,7 @@
     <title>College App</title>
 </head>
 <body>
-    <script type="text/javascript"
+   <!-- <script type="text/javascript"
             id="botcopy-embedder-d7lcfheammjct"
             class="botcopy-embedder-d7lcfheammjct"
             data-botId="5e7a19de099273f57441c317"
@@ -13,12 +13,12 @@
     s.type = 'text/javascript'; s.async = true;
     s.src = 'https://widget.botcopy.com/js/injection.js';
     document.getElementById('botcopy-embedder-d7lcfheammjct').appendChild(s);
-</script>
-   <!-- <iframe
+</script>-->
+    <iframe
             allow="microphone;"
             width="100%"
             height="610"
             src="https://console.dialogflow.com/api-client/demo/embedded/53490a76-47ef-4217-bd7b-5b6721791201">
-    </iframe>-->
+    </iframe>
 </body>
 </html>
