--- a/app/src/main/assets/chatbot.html
+++ b/app/src/main/assets/chatbot.html
@@ -17,7 +17,10 @@
     <iframe
             allow="microphone;"
             width="100%"
-            height="610"
+            height="667"
+            frameborder="0"
+            marginheight="0"
+            marginwidth="0"
             src="https://console.dialogflow.com/api-client/demo/embedded/53490a76-47ef-4217-bd7b-5b6721791201">
     </iframe>
 </body>
